docs/api/qiskit/0.19/qiskit.aqua.algorithms.IterativeAmplitudeEstimation.mdx
---
title: IterativeAmplitudeEstimation (v0.19)
description: API reference for qiskit.aqua.algorithms.IterativeAmplitudeEstimation in qiskit v0.19
in_page_toc_min_heading_level: 1
python_api_type: class
python_api_name: qiskit.aqua.algorithms.IterativeAmplitudeEstimation
---

# IterativeAmplitudeEstimation

<Class id="qiskit.aqua.algorithms.IterativeAmplitudeEstimation" isDedicatedPage={true} github="https://github.com/qiskit-community/qiskit-aqua/tree/stable/0.7/qiskit/aqua/algorithms/amplitude_estimators/iqae.py" signature="IterativeAmplitudeEstimation(epsilon, alpha, confint_method='beta', min_ratio=2, a_factory=None, q_factory=None, i_objective=None, quantum_instance=None)" modifiers="class">
  The Iterative Amplitude Estimation algorithm.

  This class implements the Iterative Quantum Amplitude Estimation (QAE) algorithm, proposed in [https://arxiv.org/abs/1912.05559](https://arxiv.org/abs/1912.05559). The output of the algorithm is an estimate that, with at least probability 1 - alpha, differs by epsilon to the target value, where both alpha and epsilon can be specified.

  It differs from the original QAE algorithm proposed by Brassard ([https://arxiv.org/abs/quant-ph/0005055](https://arxiv.org/abs/quant-ph/0005055)) in that it does not rely on Quantum Phase Estimation, but is only based on Grover’s algorithm. Iterative IQAE iteratively applies carefully selected Grover iterations to find an estimate for the target amplitude.

  The output of the algorithm is an estimate for the amplitude a, that with at least probability 1 - alpha has an error of epsilon. The number of A operator calls scales linearly in 1/epsilon (up to a logarithmic factor).

  **Parameters**

  *   **epsilon** (`float`) – Target precision for estimation target a, has values between 0 and 0.5
  *   **alpha** (`float`) – Confidence level, the target probability is 1 - alpha, has values between 0 and 1
  *   **confint\_method** (`str`) – Statistical method used to estimate the confidence intervals in each iteration, can be ‘chernoff’ for the Chernoff intervals or ‘beta’ for the Clopper-Pearson intervals (default)
  *   **min\_ratio** (`float`) – Minimal q-ratio (K\_\{i+1} / K\_i) for FindNextK
  *   **a\_factory** (`Optional`\[[`CircuitFactory`](qiskit.aqua.utils.CircuitFactory "qiskit.aqua.utils.circuit_factory.CircuitFactory")]) – The A operator, specifying the QAE problem
  *   **q\_factory** (`Optional`\[[`CircuitFactory`](qiskit.aqua.utils.CircuitFactory "qiskit.aqua.utils.circuit_factory.CircuitFactory")]) – The Q operator (Grover operator), constructed from the A operator
  *   **i\_objective** (`Optional`\[`int`]) – Index of the objective qubit, that marks the ‘good/bad’ states
  *   **quantum\_instance** (`Union`\[[`QuantumInstance`](qiskit.aqua.QuantumInstance "qiskit.aqua.quantum_instance.QuantumInstance"), [`BaseBackend`](qiskit.providers.BaseBackend "qiskit.providers.basebackend.BaseBackend"), `None`]) – Quantum Instance or Backend

  **Raises**

  [**AquaError**](qiskit.aqua.AquaError "qiskit.aqua.AquaError") – if the method to compute the confidence intervals is not supported

  ## Attributes

  <span id="iterativeamplitudeestimation-a-factory" />

  ### a\_factory

  <Attribute id="qiskit.aqua.algorithms.IterativeAmplitudeEstimation.a_factory">
    Get the A operator encoding the amplitude a that’s approximated, i.e.

    > A |0>\_n |0> = sqrt\{1 - a} |psi\_0>\_n |0> + sqrt\{a} |psi\_1>\_n |1>

    see the original Brassard paper ([https://arxiv.org/abs/quant-ph/0005055](https://arxiv.org/abs/quant-ph/0005055)) for more detail.

    **Returns**

    the A operator as CircuitFactory

    **Return type**

    [CircuitFactory](qiskit.aqua.utils.CircuitFactory "qiskit.aqua.utils.CircuitFactory")
  </Attribute>

  <span id="iterativeamplitudeestimation-backend" />

  ### backend

  <Attribute id="qiskit.aqua.algorithms.IterativeAmplitudeEstimation.backend" attributeTypeHint="qiskit.providers.basebackend.BaseBackend">
    Returns backend.

    **Return type**

    [`BaseBackend`](qiskit.providers.BaseBackend "qiskit.providers.basebackend.BaseBackend")
  </Attribute>

  <span id="iterativeamplitudeestimation-i-objective" />

  ### i\_objective

  <Attribute id="qiskit.aqua.algorithms.IterativeAmplitudeEstimation.i_objective">
    Get the index of the objective qubit. The objective qubit marks the |psi\_0> state (called ‘bad states’ in [https://arxiv.org/abs/quant-ph/0005055](https://arxiv.org/abs/quant-ph/0005055)) with |0> and |psi\_1> (‘good’ states) with |1>. If the A operator performs the mapping

    > A |0>\_n |0> = sqrt\{1 - a} |psi\_0>\_n |0> + sqrt\{a} |psi\_1>\_n |1>

    then, the objective qubit is the last one (which is either |0> or |1>).

    If the objective qubit (i\_objective) is not set, we check if the Q operator (q\_factory) is set and return the index specified there. If the q\_factory is not defined, the index equals the number of qubits of the A operator (a\_factory) minus one. If also the a\_factory is not set, return None.

    **Returns**

    the index of the objective qubit

    **Return type**

    int
  </Attribute>

  <span id="iterativeamplitudeestimation-precision" />

  ### precision

  <Attribute id="qiskit.aqua.algorithms.IterativeAmplitudeEstimation.precision" attributeTypeHint="float">
    Returns the target precision epsilon of the algorithm.

    **Return type**

    `float`

    **Returns**

    The target precision (which is half the width of the confidence interval).
  </Attribute>

  <span id="iterativeamplitudeestimation-q-factory" />

  ### q\_factory

  <Attribute id="qiskit.aqua.algorithms.IterativeAmplitudeEstimation.q_factory">
    Get the Q operator, or Grover-operator for the Amplitude Estimation algorithm, i.e.

    > Q = -A S\_0 A^\{-1} S\_psi0,

    where S\_0 reflects about the |0>\_n state and S\_psi0 reflects about |psi\_0>\_n. See [https://arxiv.org/abs/quant-ph/0005055](https://arxiv.org/abs/quant-ph/0005055) for more detail.

    If the Q operator is not set, we try to build it from the A operator. If neither the A operator is set, None is returned.

    **Returns**

    returns the current Q factory of the algorithm

    **Return type**

    QFactory
  </Attribute>

  <span id="iterativeamplitudeestimation-quantum-instance" />

  ### quantum\_instance

  <Attribute id="qiskit.aqua.algorithms.IterativeAmplitudeEstimation.quantum_instance" attributeTypeHint="Union[None, qiskit.aqua.quantum_instance.QuantumInstance]">
    Returns quantum instance.

    **Return type**

    `Optional`\[[`QuantumInstance`](qiskit.aqua.QuantumInstance "qiskit.aqua.quantum_instance.QuantumInstance")]
  </Attribute>

  <span id="iterativeamplitudeestimation-random" />

  ### random

  <Attribute id="qiskit.aqua.algorithms.IterativeAmplitudeEstimation.random">
    Return a numpy random.
  </Attribute>

  ## Methods

  <span id="iterativeamplitudeestimation-construct-circuit" />

  ### construct\_circuit

  <Function id="qiskit.aqua.algorithms.IterativeAmplitudeEstimation.construct_circuit" signature="IterativeAmplitudeEstimation.construct_circuit(k, measurement=False)">
    Construct the circuit Q^k A |0>.

    The A operator is the unitary specifying the QAE problem and Q the associated Grover operator.

    **Parameters**

    *   **k** (`int`) – The power of the Q operator.
    *   **measurement** (`bool`) – Boolean flag to indicate if measurements should be included in the circuits.

    **Return type**

    [`QuantumCircuit`](qiskit.circuit.QuantumCircuit "qiskit.circuit.quantumcircuit.QuantumCircuit")

    **Returns**

    The circuit Q^k A |0>.
  </Function>

  <span id="iterativeamplitudeestimation-run" />

  ### run

  <Function id="qiskit.aqua.algorithms.IterativeAmplitudeEstimation.run" signature="IterativeAmplitudeEstimation.run(quantum_instance=None, **kwargs)">
    Execute the algorithm with selected backend.

    **Parameters**

    *   **quantum\_instance** (`Union`\[[`QuantumInstance`](qiskit.aqua.QuantumInstance "qiskit.aqua.quantum_instance.QuantumInstance"), [`BaseBackend`](qiskit.providers.BaseBackend "qiskit.providers.basebackend.BaseBackend"), `None`]) – the experimental setting.
    *   **kwargs** (*dict*) – kwargs

    **Returns**

    results of an algorithm.

    **Return type**

    dict

    **Raises**

    [**AquaError**](qiskit.aqua.AquaError "qiskit.aqua.AquaError") – If a quantum instance or backend has not been provided
  </Function>

  <span id="iterativeamplitudeestimation-set-backend" />

  ### set\_backend

  <Function id="qiskit.aqua.algorithms.IterativeAmplitudeEstimation.set_backend" signature="IterativeAmplitudeEstimation.set_backend(backend, **kwargs)">
    Sets backend with configuration.

    **Return type**

    `None`
  </Function>
</Class>

